[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/sxgd/nodes/fx/SxFXCamera/SxFXCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
item_spawn_frequency = null
game_time_limit = null

[node name="Background2" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="Camera" parent="." instance=ExtResource( 2 )]

[node name="Tiles" type="Node2D" parent="."]

[node name="BelowPlayer" type="Node2D" parent="Tiles"]

[node name="Player" type="Node2D" parent="Tiles"]

[node name="AbovePlayer" type="Node2D" parent="Tiles"]

[node name="Bubbles" type="Node2D" parent="."]

[node name="ItemTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 4 )]
